# case_insensitive_string

./: Cargo.toml  README.md
src/: lib.rs
tests/: compact.rs
