[package]
name = "case_insensitive_string"
version = "0.2.3"
authors = ["Jeff Mendez <jeff@a11ywatch.com>"]
edition = "2021"
description = "A case insensitive string struct."
license = "MIT"
readme = "README.md"
repository = "https://github.com/a11ywatch/case_insensitive_string"
keywords = ["case-insensitive", "string"]
categories = ["config", "data-structures"]
include = ["src/*", "LICENSE", "README.md"]

[dependencies]
compact_str = { version = "0.7.1", optional = true }
serde = { version = "^1.0.193", optional = true, features = ["derive"] }

[features]
compact = ["dep:compact_str"]
serde = ["dep:serde"]
